# amy

./: .env.example  .gitignore  README.md  cli.py  config.py  pyproject.toml  setup_env.sh  train_apo.py
agent/: README.md  __init__.py  instrumentation.py  memory.py  orchestrator.py  pyproject.toml
agent/docs/: architecture.md
agent/skills/: __init__.py  summarize.py  web_search.py
agent/src/agent_core/: __init__.py  adk_agent.py  app.py  server.py
agent/src/agent_core/storage/: markdown_store.py
agent/src/amy_agent_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
agent/subagents/: __init__.py
agent/tools/: __init__.py  file_tool.py  search_tool.py
ami/: .env.example  __init__.py  agent.py  graph.py  langgraph.json  main.py  prompts.py  requirements.txt  skills.py
data/: README.md
data/todos/: todos.md
docs/: requirements.md
memory/: semantic_memory.md
scripts/: dev.sh  init_env.sh  setup_ui.sh  sync_ui_config.sh
web/: .env.local  README.md  package-lock.json  package.json
web/src/app/: globals.css  layout.jsx  page.jsx
web/src/app/api/copilotkit/: route.js
web/src/app/hooks/: useChat.ts
web/src/lib/: config.ts
